Projeto final na pasta src

--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -13,7 +13,7 @@
       <p class="nav"><a href="formação.html">Formação</a></p>
       <p class="nav">Hobbies</p>
     </div>
-<div class="bloco">
+<div class="hobbies">
   <h1>Hobbies</h1>
   <hr>
   <table>
