Projeto final com footer

--- a/src/work.html
+++ b/src/work.html
@@ -42,5 +42,12 @@
     <hr>
   </div>
 </body>
+<footer>
+  <div class="foot">
+    <h4 style="padding-top: 20px;margin-bottom:0;">Contato: (12)9999-9999</h4>
+    <h4 style="margin-top: 0px;">Email:joaomarcos8922@gmail.com </h4>
+
+  </div>
+</footer>
 
 </html>
